--- a/resume.tex
+++ b/resume.tex
@@ -78,7 +78,7 @@
      \vspace{2pt}
      \textbf{Databases:} \hspace{10mm} MongoDB, PostgreSQL, Prisma ORM, Redis \\
      \vspace{2pt}
-     \textbf{DevOps \& Tools:} \hspace{4mm} Docker, Kubernetes, NGINX, GitHub Actions (CI/CD), Git, AWS (EC2)
+     \textbf{DevOps \& Tools:} \hspace{4mm} Docker, NGINX, GitHub Actions (CI/CD), Git, AWS (EC2), Prometheus, Grafana, Kafka
     }}
 \end{itemize}
 
@@ -88,18 +88,17 @@
 \begin{itemize}[leftmargin=0.15in, label={}]
 
     \resumeProjectHeading
-      {\href{https://github.com/deepnav4/Gym-Manangment}{\color{accent} GitHub} $|$ \textbf{Gym-Management System} $|$ \emph{Docker, NGINX, GitHub Actions, Node.js, React}}{}
-      \resumeItem{Designed and deployed a scalable gym management platform using a \textbf{Dockerized microservices architecture}.}
-      \resumeItem{Implemented automated \textbf{CI/CD workflows} via GitHub Actions to streamline deployment.}
-      \resumeItem{Configured \textbf{NGINX} as a reverse proxy and load balancer.}
-      \resumeItem{Developed dashboards for members and trainers with real-time analytics.}\\
+      {\href{https://snippet-sync-orpin.vercel.app}{\color{accent} Live} $|$ \href{https://github.com/deepnav4/snippetSync}{\color{accent} GitHub} $|$ \textbf{SnippetSync} $|$ \emph{React, Node.js, Redis, Docker}}{}
+      \resumeItem{Built IDE extensions for seamless code synchronization across development environments.}
+      \resumeItem{Implemented distributed caching with Redis for efficient data retrieval and session management.}
+      \resumeItem{Containerized application using Docker to ensure consistent deployments across multiple environments.}\\
 \noindent\makebox[\linewidth]{\color{secondary}{\tiny\dotfill}}
 
     \resumeProjectHeading
-      {\href{https://snippet-sync-orpin.vercel.app}{\color{accent} Live} $|$ \href{https://github.com/deepnav4/snippetSync}{\color{accent} GitHub} $|$ \textbf{SnippetSync} $|$ \emph{React, Node.js, Redis, Docker}}{}
-      \resumeItem{Developed a real-time collaborative code editor supporting live cursors and instant updates.}
-      \resumeItem{Integrated \textbf{Redis Pub/Sub} to distribute events across scalable backend instances.}
-      \resumeItem{Created a companion \textbf{VS Code extension} for syncing code edits from the IDE.}\\
+      {\href{https://github.com/deepnav4/Gym-Manangment}{\color{accent} GitHub} $|$ \textbf{Gym-Management System} $|$ \emph{Docker, GitHub Actions, Node.js, React}}{}
+      \resumeItem{Designed and deployed a scalable gym management platform using a \textbf{Dockerized microservices architecture}.}
+      \resumeItem{Implemented automated \textbf{CI/CD workflows} via GitHub Actions to streamline deployment.}
+      \resumeItem{Developed dashboards for members and trainers with real-time analytics.}\\
 \noindent\makebox[\linewidth]{\color{secondary}{\tiny\dotfill}}
 
 
